Mon Dec 19 20:07:44 2016  Jiri (George) Lebl <jirka@5z.com>

	* po/eo.po: Add some translations.

	* configure.ac: move file to new name.  Require vte 0.26

	* src/gnome-genius.c: remove deprecated vte functions

Fri Dec 16 17:36:16 2016  Jiri (George) Lebl <jirka@5z.com>

	* examples/complex-analysis-argument-principle.gel: Add argument
	  principle example

	* examples/complex-analysis-mandelbrot-set.gel: slightly modify, try
	  more iterations

Tue Nov 22 14:51:35 2016  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c: fix doc string for ErrorFunction,  Thanks to
	  Ask Hjorth Larsen

Tue Nov 22 14:47:08 2016  Jiri (George) Lebl <jirka@5z.com>

	* src/complex-analysis-wandering-ball.gel: add "angle" mode to show
	  what happens to angles.

Thu Sep 22 17:41:55 2016  Jiri (George) Lebl <jirka@5z.com>

	* examples/riemann-integral-darboux.gel: Add an example for Darboux
	  sums

Thu Sep 22 17:05:13 2016  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: add "filled" to lines

	* examples/riemann-integral.gel: Riemann sums example

	* help/C/genius.xml: document "filled"

Wed Sep 21 23:47:46 2016  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c, src/examples.[ch]: split up examples into
	  submenus by category

	* src/gnome-genius.c: fix warnings

	* examples/*.gel: fix some usage of undocumented syntax for
	  LinePlotLineDraw

Wed Sep 21 20:54:37 2016  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: run program from idle to avoid a queued up
	  program if double hitting run

Wed Sep 21 20:44:39 2016  Jiri (George) Lebl <jirka@5z.com>

	* examples/*.gel: update the complex analysis examples to have
	  saner limits, make the mandelbrot set have roughly the right
	  aspect.

Wed Sep 21 18:55:34 2016  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: Add LinePlotWaitForClick and LinePlotMouseLocation
	  for interactive programs

	* help/C/genius.xml: document the above

	* examples/: Make wandering ball interactive and add two Mandelbrot