@@ -1,12 +1,9 @@
 # Category: Differential Equations
-# Name: Heat equation solved using Explicit Finite Difference Method (surface plot)
+# Name: Heat equation solved using Explicit Finite Difference Method (line plot)
 #
 # Solve heat equation using explicit FDM.  We try to animate as different
 # times are solved for, though of course we must skip graphing some times when
-# there are too many steps.
-#
-# NOTE that this program changes your variable names in the surface plotting.
-# To set them back to default do SurfacePlotVariableNames = ["x","y","z"];
+# there are too many steps.  The plot is an animated line plot.
 #
 # The equation is u_t = u_{xx} where 0 < x < 1
 # Boundary conditions by default are
@@ -20,7 +17,7 @@ function initialf(x) = sin(2*pi*x);
 #function initialf(x) = 0.0;
 #function initialf(x) = x;
 #function initialf(x) = 1-x;
-#function initialf(x) = if x < 0.5 then 2*x else 2-2*x
+#function initialf(x) = if x < 0.5 then 2*x else 2-2*x;
 #function initialf(x) = if x < 0.5 then 4*x^2 else 4*(x-1)^2;
 #function initialf(x) = if x < 0.5 then -1 else 1;
 
@@ -34,8 +31,19 @@ leftenddirichlet := 0.0;
 rightendinsulated := false;
 rightenddirichlet := 0.0;
 
+# How long to wait after each animation step.  Lowering the number will
+# make things go faster, increasing it will make things go slower.
+waitinterval := 0.05;
+
+# Plot every so many steps.  Setting it to a higher value makes the
+# animation faster.
+plotevery := 1;
+
+# plot range is x between 0 and 1, and y between -1.1 and 1.1
+LinePlotWindow = [0,1,-1.1,1.1];
+
 # The number of intervals on the x axis
-n := 20;
+n := 60;
 h := float(1/n);
 
 # The value of k/h^2 must be less than or equal 0.5 for the method to be
@@ -44,34 +52,28 @@ h := float(1/n);
 # Or set it to less. See what it does to accuracy.
 k := 0.4*h^2;
 
-
-# Maximum t to go up to
-maxt := 0.05;
+# Maximum t to go up to.  maxt=1 will go for a quite a while
+maxt := 1.0;
 
 m := round(maxt/k);
 
-# Never plot more than 4*n steps in the t (that is y) direction
-# rather skip rows.  If you do not want to skip rows, set plotevery
-# to 1
-plotevery := max(1,floor(m/(2*n)));
-
 #Set up initial value
 u := null;
-data := null;
+x := null;
 for j=1 to n+1 do (
-  x := (j-1)*h;
-  u@(j) := initialf(x);
-  data := [data;[x,0,u@(j)]]
+  xx := (j-1)*h;
+  u@(j) := initialf(xx);
+  x@(j) := xx;
 );
 
-SurfacePlotDrawLegends := true;
-SurfacePlotVariableNames := ["x","t","u"];
+# Make sure u and x are column vectors not row vectors;
+u := u.';
+x := x.';
+
+LinePlotDrawLegends := true;
 PlotWindowPresent(); # Make sure the window is raised
 
-
-# If you change it from 0 to plotevery, then no plots will be generated
 toplot := 0;
-#toplot := plotevery;
 
 for i=1 to m do (
   v := u;
@@ -88,18 +90,16 @@ for i=1 to m do (
   ) else (
     u@(n+1) := rightenddirichlet
   );
-
+  
   increment toplot;
   if toplot == plotevery then (
     toplot := 0;
-    for j=2 to n do (
-      data := [data;[(j-1)*h,i*k,u@(j)]]
-    );
-    data := [data;[0,i*k,u@(1)]];
-    data := [data;[1,i*k,u@(n+1)]];
-    SurfacePlotData(data,"u",[0,1,0,maxt])
+
+    PlotCanvasFreeze();
+    LinePlotClear();
+    LinePlotDrawLine([x,u],"legend","u","color","blue");
+    PlotCanvasThaw();
+  
+    wait(waitinterval)
   )
 );
-
-#print left hand endpoint
-print ("Approximate value of u(0," + maxt + ") ~~ " + u@(1));
