@@ -230,14 +230,60 @@ MaxDigits=12;exp(3*ln(2))					8.0
 if(0)then 1;0							0
 24/2								12
 a@(1,2)=3;a							[0,3]
+a@(1,2)=3;a@(3)=9;a						[0,3,9]
+a@(2,1)=3;a=a.';a@(3)=9;a					[0,3,9]
+a@(2,1)=3;a@(3)=9;a						[0;3;9]
+a@(1,2)=3;a=a.';a@(3)=9;a					[0;3;9]
 a@(2,2)=3;a							[0,0;0,3]
 a@(,2)=[1;2;3];a						[0,1;0,2;0,3]
 [1,2;3,4]@(,2)							[2;4]
+m=[1,2;3,4];m=m.';m@(,2)					[3;4]
+m=[1,2;3,4];m=m.';m@(,2)=[9;10];m				[1,9;2,10]
 [1,2;3,4]@(1,)							[1,2]
+m=[1,2;3,4];m=m.';m@(1,)					[1,3]
 [1,2;3,4]@(2,)							[3,4]
+m=[1,2;3,4];m=m.';m@(2,)					[2,4]
 a=[1,2;3,4];a@(2,)=[5,6];a					[1,2;5,6]
 a=[1,2;3,4];a@(2,)=5;a						[1,2;5,5]
 a@(1,1)=&d;a							[(&d)]
+c=[1,2,3];c@([1,2])=9;c						[9,9,3]
+c=[1,2,3];c@([1,3])=9;c						[9,2,9]
+c=[1,2,3];c@([2,6])=9;c						[1,9,3,0,0,9]
+c=[1,2,3];c=c.';c@([1,2])=9;c					[9;9;3]
+c=[1,2,3];c=c.';c@([1,3])=9;c					[9;2;9]
+c=[1,2,3];c=c.';c@([2,6])=9;c					[1;9;3;0;0;9]
+c=[1;2;3];c@([1,2])=9;c						[9;9;3]
+c=[1;2;3];c@([1,3])=9;c						[9;2;9]
+c=[1;2;3];c@([2,6])=9;c						[1;9;3;0;0;9]
+c=[1;2;3];c=c.';c@([1,2])=9;c					[9,9,3]
+c=[1;2;3];c=c.';c@([1,3])=9;c					[9,2,9]
+c=[1;2;3];c=c.';c@([2,6])=9;c					[1,9,3,0,0,9]
+c=[1,2,3];c@([1,2])=[7,8];c					[7,8,3]
+c=[1,2,3];c@([1;2])=[7,8];c					[7,8,3]
+c=[1,2,3];c@([1,2])=[7;8];c					[7,8,3]
+c=[1,2,3];c@([1;2])=[7;8];c					[7,8,3]
+c=[1,2,3];c@([1,3])=[7,8];c					[7,2,8]
+c=[1,2,3];c@([2,6])=[7,8];c					[1,7,3,0,0,8]
+c=[1,2,3];c=c.';c@([1,2])=[7,8];c				[7;8;3]
+c=[1,2,3];c=c.';c@([1;2])=[7,8];c				[7;8;3]
+c=[1,2,3];c=c.';c@([1,2])=[7;8];c				[7;8;3]
+c=[1,2,3];c=c.';c@([1;2])=[7;8];c				[7;8;3]
+c=[1,2,3];c=c.';c@([1,3])=[7,8];c				[7;2;8]
+c=[1,2,3];c=c.';c@([2,6])=[7,8];c				[1;7;3;0;0;8]
+c=[1;2;3];c@([1,2])=[7,8];c					[7;8;3]
+c=[1;2;3];c@([1,2,3])=[7,8];c					[7;8;0]
+c=[1;2;3];c@([1,3])=[7,8];c					[7;2;8]
+c=[1;2;3];c@([2,6])=[7,8];c					[1;7;3;0;0;8]
+c=[1;2;3];c=c.';c@([1,2])=[7,8];c				[7,8,3]
+c=[1;2;3];c=c.';c@([1,2,3])=[7,8];c				[7,8,0]
+c=[1;2;3];c=c.';c@([1,3])=[7,8];c				[7,2,8]
+c=[1;2;3];c=c.';c@([2,6])=[7,8];c				[1,7,3,0,0,8]
+c=[1,2,3,4;5,6,7,8];c@(6)=99;c					[1,2,3,4;5,99,7,8]
+c=[1,5;2,6;3,7;4,8];c=c.';c@(6)=99;c				[1,2,3,4;5,99,7,8]
+c=[1,2,3,4;5,6,7,8];c@(4)=99;c					[1,2,3,99;5,6,7,8]
+c=[1,5;2,6;3,7;4,8];c=c.';c@(4)=99;c				[1,2,3,99;5,6,7,8]
+c=[1,2,3,4;5,6,7,8];c@(11)=99;c					[1,2,3,4;5,6,7,8;0,0,99,0]
+c=[1,5;2,6;3,7;4,8];c=c.';c@(11)=99;c				[1,2,3,4;5,6,7,8;0,0,99,0]
 if(1 and 1) then 1 else 0					1
 if(0 and 1) then 1 else 0					0
 if("blah" and 1) then 1 else 0					1
@@ -307,8 +353,11 @@ rref([1,2,3;2,4,6])						[1,2,3;0,0,0]
 [[2;3;4],I(2)]							[2,1,0;3,0,1;4,1,0]
 a@(1,&f)=1							((a@(1,(&f)))=1)
 a=[1,2;3,4];a@(,2)=[1,2]					((a@(,2))=[1,2])
+a=[1,3;2,4];a=a.';a@(,2)=[1,2]					((a@(,2))=[1,2])
 a=[1,2;3,4];a@(,2)=[7,8]';a					[1,7;3,8]
+a=[1,3;2,4];a=a.';a@(,2)=[7,8]';a				[1,7;3,8]
 a=[1,2;3,4];a@(2,)=[7;8]';a					[1,2;7,8]
+a=[1,3;2,4];a=a.';a@(2,)=[7;8]';a				[1,2;7,8]
 a=[1,2;3,4];a@(3:1,1:2)						([1,2;3,4]@(`[3,2,1],`[1,2]))
 I(3)@(2:3,)							[0,1,0;0,0,1]
 a@(2:3,2:3)=[1,2;3,4];a						[0,0,0;0,1,2;0,3,4]
@@ -318,8 +367,11 @@ a=[1,2,3;4,5,6;7,8,9];[a@(1:1,1:1),a@(1,3);a@(3,1),a@(3,3)]	[1,3;7,9]
 a=[1,2,3;4,5,6;7,8,9];a@(1:2,2:3)				[2,3;5,6]
 a=[1,2,3;4,5,6;7,8,9];a@(1,1:3)					[1,2,3]
 a=[1,2,3;4,5,6;7,8,9];a@(1:3,2)'				[2,5,8]
+a=[1,2,3;4,5,6;7,8,9];a@(1:3,2).'				[2,5,8]
 a=[1,2;3,4];a@(2:3,2)=[5,6]';a					[1,2;3,5;0,6]
+a=[1,3;2,4];a=a.';a@(2:3,2)=[5,6]';a				[1,2;3,5;0,6]
 a=[1,2;3,4];a@(2:3,2:3)=[5,6;7,8];a				[1,2,0;3,5,6;0,7,8]
+a=[1,3;2,4];a=a.';a@(2:3,2:3)=[5,6;7,8];a			[1,2,0;3,5,6;0,7,8]
 b@(4:8,3)=[1,2,3,4]'						((b@(`[4,5,6,7,8],3))=[1;2;3;4])
 b@(2:3,2)=[1,2]';b						[0,0;0,1;0,2]
 (k=0;while(k<3) do (k=k+1;))+1					((null)+1)
@@ -1070,6 +1122,15 @@ v=[0,1,2];increment v;v						[1,2,3]
 v=[0,1,2];increment v by 2;v					[2,3,4]
 v=[0,1,2];increment v@([2,3]);v					[0,2,3]
 v=[0,1,2];increment v@(2);v					[0,2,2]
+v=[0,1,2];increment v@(5);v					[0,1,2,0,1]
+v=[0;1;2];v=v.';increment v@(2);v				[0,2,2]
+v=[0;1;2];v=v.';increment v@(5);v				[0,1,2,0,1]
+v=[0,1,2;3,4,5];increment v@(2);v				[0,2,2;3,4,5]
+v=[0,1,2;3,4,5];increment v@(5);v				[0,1,2;3,5,5]
+v=[0,1,2;3,4,5];increment v@(8);v				[0,1,2;3,4,5;0,1,0]
+v=[0,3;1,4;2,5];v=v.';increment v@(2);v				[0,2,2;3,4,5]
+v=[0,3;1,4;2,5];v=v.';increment v@(5);v				[0,1,2;3,5,5]
+v=[0,3;1,4;2,5];v=v.';increment v@(8);v				[0,1,2;3,4,5;0,1,0]
 v=[0,1;2,3];increment v;v					[1,2;3,4]
 v=[0,1;2,3];increment v@(1,2);v					[0,2;2,3]
 v=[0,1;2,3];increment v@(1,:);v					[1,2;2,3]
@@ -1089,7 +1150,7 @@ m=[1,2;3,4];m@(1,1) swapwith m@(1,2);m				[2,1;3,4]
 m=[1,2;3,4];m@(3,1) swapwith m@(1,2);m				[1,0;3,4;2,0]
 k=99;m=[1,2;3,4];k swapwith m@(1,2);m				[1,99;3,4]
 k=99;m=[1,2;3,4];m@(1,2) swapwith k;m				[1,99;3,4]
-A=2;A swapwith e;A						2 
+A=2;A swapwith e;A						2
 ReverseVector([1:5])						`[5,4,3,2,1]
 ReverseVector(null)+1						((null)+1)
 ShuffleVector([1])						[1]
