@@ -1,3 +1,14 @@
+Tue Dec 20 15:11:04 2016  Jiri (George) Lebl <jirka@5z.com>
+
+	* examples/explicit-heat-fdm.gel, examples/explicit-heat-fdm-line.gel:
+	  Improve the FDM example: make it easy to do other boundary
+	  conditions, and add some more sample initial functions.  Also
+	  add a version that plots the 2d line plot as an animation
+
+	* src/matrixw.c: Fix setting matrices that have been transposed.
+
+	* src/geniustests.pl: Add a bunch of tests
+
 Mon Dec 19 20:07:44 2016  Jiri (George) Lebl <jirka@5z.com>
 
 	* po/eo.po: Add some translations.
